app/styles/_search.scss
#search-box {
  width: 80%;
  display: block;
  margin: auto;
  border: none;
  background-color: transparent;
  margin: 10px auto 40px auto;
  outline: none;
  color: white;
  font-size: 40px;
  font-family: Tiempos, serif;
  text-align: center;
  padding: 8px;

  @media #{$media-query-phone} {
    font-size: 20px;
  }

  @include placeholder {
    color: #555;
  }
}

#search-results {
  text-align: center;
  width: 70%;
  margin:auto;

  li {
    @include size(158px 236px);
    margin: 6px;
    display: inline-block;
    background-color: #333;
    position: relative;

    a {
      @include size(100%);
      display: block;

      span {
        position: absolute;
        left: 0;
        width: calc(100% - 20px);
        height: calc(100% - 40px);
        display: inline-block;
        vertical-align: center;
        padding: 30px 10px 10px 10px;
        color: #555;
        text-decoration: none;
        line-height: 1.4;
      }

      img {
        @include size(100%);
        position: absolute;
        left: 0;
      }
    }

    @media #{$media-query-phone} {
      @include size(79px 118px);
    }
  }

  @media #{$media-query-phone} {
    width: 90%;
  }
}

section.search {
  .search-box-container {
    position: relative;

    .input-clear {
      @include size(40px 40px);
      position: absolute;
      right: 10%;
      top: 16px;
      color: white;

      &.hide { display: none; }

      &:before, &:after {
        @include size(1px 40px);
        position: absolute;
        content: '';
        display: block;
        background-color: white;
        left: 18px;

        @media #{$media-query-phone} {
          @include size(1px 30px);
          top: 0;
          right: 5%;
        }
      }

      &:before { @include transform(rotate(45deg));  }
      &:after  { @include transform(rotate(-45deg)); }

      @media #{$media-query-phone} {
        top: 4px;
        right: 5%;
      }
    }

    .loading-animation {
      position: absolute;
      top: 0;
      left: 10%;
      top: 16px;

      @media #{$media-query-phone} {
        top: 4px;
        left: 7%;
      }
    }
  }

  .empty {
    display: none;
    text-align: center;
    padding: 0 20px;
    line-height: 1.4;

    &.show { display: block; }
  }
}

